# DataWash

./: .gitignore  CHANGELOG.md  LICENSE  PERFORMANCE_REPORT.md  README.md  SECURITY.md  SPEC.md  TESTING_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  index.md  user-guide.md
examples/: README.md  csv_cleaning.py  jupyter_demo.ipynb  ml_preprocessing.py  quickstart.py
examples/sample_data/: customers_messy.csv  employees_messy.csv  orders_messy.csv  test_manual.csv
src/datawash/: __init__.py
src/datawash/adapters/: __init__.py  base.py  csv_adapter.py  excel_adapter.py  json_adapter.py  parquet_adapter.py
src/datawash/cli/: formatters.py  main.py
src/datawash/codegen/: __init__.py  generator.py
src/datawash/core/: __init__.py  cache.py  config.py  dtypes.py  exceptions.py  models.py  report.py  sampling.py
src/datawash/detectors/: __init__.py  base.py  duplicate_detector.py  format_detector.py  missing_detector.py  outlier_detector.py  registry.py  similarity_detector.py  type_detector.py
src/datawash/profiler/: __init__.py  engine.py  parallel.py  patterns.py  statistics.py
src/datawash/suggestors/: __init__.py  base.py  engine.py  prioritizer.py
src/datawash/transformers/: __init__.py  base.py  categories.py  columns.py  duplicates.py  formats.py  missing.py  registry.py  types.py
tests/: benchmark_performance.py  conftest.py  generate_test_data.py  test_adapters.py  test_cache.py  test_cli.py  test_codegen.py  test_detectors.py  test_dtypes.py  test_edge_cases.py  test_integration.py  test_parallel.py  test_profiler.py  test_sampling.py  test_suggestors.py  test_transformers.py  validate_performance.py
