[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datawash"
version = "0.1.0"
description = "Intelligent data cleaning and quality analysis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "scikit-learn>=1.0.0",
    "python-Levenshtein>=0.21.0",
]
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sai Pranav Krovvidi"}
]
keywords = ["data-cleaning", "data-quality", "pandas", "etl", "data-analysis"]

[project.urls]
Homepage = "https://github.com/Pranav1011/DataWash"
Repository = "https://github.com/Pranav1011/DataWash"
Issues = "https://github.com/Pranav1011/DataWash/issues"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.2.0",
    "datasketch>=1.5.0",
]
formats = [
    "pyarrow>=10.0.0",
    "openpyxl>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
datawash = "datawash.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
